--- a/templates/default/rt/rtprintindex.html
+++ b/templates/default/rt/rtprintindex.html
@@ -25,15 +25,15 @@
 						{icon name="timetable"}
 					</TD>
 					<TD width="1%" nowrap>
-						<span class="bold">{trans("Period:")} </span>
+						<span class="bold">{trans("Period")} </span>
 					</TD>
 					<TD class="nobr" colspan="8">
                                                 <label>
-                                                	{trans("From:")}
+                                                	{trans("From")}
                                                 	<input type="text" size="10" name="datefrom" value="" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar" trigger="datefrom"}>&nbsp;
                                                 </label>
                                                 <label>
-                                                	{trans("To:")}
+                                                	{trans("To")}
                                                 	<input type="text" size="10" name="dateto" value="" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar" trigger="dateto"}>&nbsp;
                                                 </label>
                                         </TD>
@@ -43,12 +43,12 @@
 						{icon name="home"}
 					</TD>
 					<TD class="bold nobr">
-						{trans("Address:")}
+						{trans("Address")}
 					</TD>
 					<TD class="nobr" colspan="8">
 						<INPUT type="text" name="address">
-						<span class="bold">{trans("City:")}</span> <INPUT type="text" name="city" VALUE="">
-						<span class="bold">{trans("Postcode:")}</span> <INPUT type="text" name="zip" VALUE="" SIZE="10">
+						<span class="bold">{trans("City")}</span> <INPUT type="text" name="city" VALUE="">
+						<span class="bold">{trans("Postcode")}</span> <INPUT type="text" name="zip" VALUE="" SIZE="10">
 					</TD>
 				</TR>
 				<TR>
@@ -56,7 +56,7 @@
 						{icon name="queue"}
 					</TD>
 					<TD width="1%" nowrap>
-						<B>{trans("Queue:")}</B>
+						<B>{trans("Queue")}</B>
 					</TD>
 					<TD width="1%">
 						<SELECT size="1" name="queue" {tip text="You can select queue to limit results"}>
@@ -70,7 +70,7 @@
 						{icon name="customer"}
 					</TD>
 					<TD style="width: 1%;" class="bold nobr">
-						{trans("Customer:")}
+						{trans("Customer")}
 					</TD>
 					<TD style="width: 1%;" class="nobr" colspan="2">
 						{customerlist form="ticketslist" customers=$customers selectname="cust" inputname="customer"
@@ -82,7 +82,7 @@
 						{icon name="subject"}
 					</TD>
 					<TD width="1%" nowrap>
-						<B>{trans("Subject:")}</B>
+						<B>{trans("Subject")}</B>
 					</TD>
 					<TD width="92%" nowrap>
 						<INPUT type="text" name="subject" value="" size="30" {tip text="Enter subject"}>
@@ -93,7 +93,7 @@
 						{icon name="status"}
 					</TD>
 					<TD width="1%">
-						<B>{trans("Status:")}</B>
+						<B>{trans("Status")}</B>
 					</TD>
 					<TD width="1%">
 						<SELECT size="1" name="status" {tip text="You can select status to limit results"}>
@@ -108,7 +108,7 @@
 						{icon name="uptime"}
 					</TD>
 					<TD width="1%">
-						<B>{trans("Uptime:")}</B>
+						<B>{trans("Uptime")}</B>
 					</TD>
 					<TD width="1%" nowrap>
 						<INPUT TYPE="text" NAME="days" SIZE="3"> {trans("days")}
@@ -122,7 +122,7 @@
 						{icon name="delete"}
 					</TD>
 					<TD style="width: 1%;">
-						<B>{trans("Removed:")}</B>
+						<B>{trans("<!rt>Removed")}</B>
 					</TD>
 					<TD style="width: 1%;">
 						<SELECT size="1" name="removed" {tip text="You can select status to limit results"}>
@@ -186,15 +186,15 @@
 						{icon name="timetable"}
 					</TD>
 					<TD width="1%" nowrap>
-						<span class="bold">{trans("Period:")} </span>
+						<span class="bold">{trans("Period")} </span>
 					</TD>
 					<TD class="nobr" colspan="8">
                                                 <label>
-                                                	{trans("From:")}
+                                                	{trans("From")}
                                                 	<input type="text" size="10" name="datefrom" value="" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar" trigger="datefrom"}>&nbsp;
                                                 </label>
                                                 <label
-                                                	>{trans("To:")}
+                                                	>{trans("To")}
                                                 	<input type="text" size="10" name="dateto" value="" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar" trigger="dateto"}>&nbsp;
                                                 </label>
                                         </TD>
@@ -204,7 +204,7 @@
 						{icon name="queue"}
 					</TD>
 					<TD width="1%" nowrap>
-						<B>{trans("Queue:")}</B>
+						<B>{trans("Queue")}</B>
 					</TD>
 					<TD width="1%">
 						<SELECT size="1" name="queue" {tip text="You can select queue to limit results"}>
@@ -227,7 +227,7 @@
 						{icon name="delete"}
 					</TD>
 					<TD style="width: 1%;">
-						<B>{trans("Removed:")}</B>
+						<B>{trans("<!rt>Removed")}</B>
 					</TD>
 					<TD style="width: 1%;">
 						<SELECT size="1" name="removed" {tip text="You can select status to limit results"}>
