--- a/templates/default/rt/rtqueuelist.html
+++ b/templates/default/rt/rtqueuelist.html
@@ -140,7 +140,7 @@
         <TFOOT>
 	<TR class="lms-ui-button-panel">
 		<TD COLSPAN="4" class="text-right bold">
-			{icon name="count" label="Total:"}
+			{icon name="count" label="Total"}
 		</TD>
 		<TD class="text-center bold">
 			{sum array=$queues column=new}
