--- a/templates/default/rt/rtticketprint.html
+++ b/templates/default/rt/rtticketprint.html
@@ -121,7 +121,7 @@
 	</COLGROUP>
 	<TR CLASS="dark">
 		<TD class="bold nobr">
-			{trans("Requests causes (last year):")}
+			{trans("Requests causes (last year)")}
 		</TD>
 		<TD>
 			{trans("company's side")}: <B>{$stats.2.num|default:0}</B>,
@@ -151,7 +151,7 @@
 			{$message.createtime|date_format:"%Y/%m/%d %H:%M"}
 		</TD>
 		<TD class="HEAD text-right bold">
-			{trans("From:")}{if $message.type == $smarty.const.RTMESSAGE_REGULAR}<BR>{trans("Subject:")}{/if}
+			{trans("From:")}{if $message.type == $smarty.const.RTMESSAGE_REGULAR}<BR>{trans("Subject")}{/if}
 		</TD>
 		<TD class="HEAD nobr">
 			{if $message.type == $smarty.const.RTMESSAGE_REGULAR}
@@ -196,7 +196,7 @@
 				{$message.createtime|date_format:"%Y/%m/%d %H:%M"}
 			</td>
 			<td class="fbt text-right bold nobr valign-top">
-				{trans("From:")}
+				{trans("From")}
 			</td>
 			<td colspan="2" class="fbt">
 				{$message.username|escape}<BR>
@@ -212,7 +212,7 @@
 <TABLE width="100%" cellpadding="3" align="CENTER">
 	<TR>
 		<TD width="100%" class="HEAD">
-		{trans("Notes:")}
+		{trans("Notes")}
 		</TD>
 	</TR>
 	<TR>
