--- a/templates/default/rt/rtticketinfoshort.html
+++ b/templates/default/rt/rtticketinfoshort.html
@@ -14,7 +14,7 @@
 	{if $ticket.creatorid}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="user" label="Created by:"}
+			{icon name="user" label="Created by"}
 		</TD>
 		<TD>
 			<A href="?m=userinfo&id={$ticket.creatorid}">{$ticket.creator}</a>
@@ -24,7 +24,7 @@
 	{if $ticket.createtime}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="uptime" label="Creation time:"}
+			{icon name="uptime" label="Creation time"}
 		</TD>
 		<TD>
 			{$ticket.createtime|date_format:"%Y/%m/%d %H:%M:%S"}
@@ -34,7 +34,7 @@
 	{if $ticket.invprojectid}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="money" label="Investment project:"}
+			{icon name="money" label="Investment project"}
 		</TD>
 		<TD>
 			{$ticket.invproject_name} ({$ticket.invprojectid})
@@ -43,7 +43,7 @@
 	{/if}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="uptime" label="Uptime:"}
+			{icon name="uptime" label="Uptime"}
 		</TD>
 		<TD>
 			{$ticket.uptime}
@@ -51,7 +51,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="cause" label="Cause:"}
+			{icon name="cause" label="Cause"}
 		</TD>
 		<TD>
 			{if $ticket.cause==2}{trans("company's side")}
@@ -62,7 +62,7 @@
 	{if isset($ticket.priority)}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="priority" label="Priority:"}
+			{icon name="priority" label="Priority"}
 		</TD>
 		<TD>
 			{$_RT_PRIORITIES[$ticket.priority]}
@@ -72,7 +72,7 @@
 	{if $ticket.parentid}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="parentticket" label="Parent ticket:"}
+			{icon name="parentticket" label="Parent ticket"}
 		</TD>
 		<TD>
 			<A href="?m=rtticketview&id={$ticket.parentid}">{t a=$ticket.parentid|string_format:"%06d"}$a{/t}</A><br>
@@ -82,7 +82,7 @@
 	{if $ticket.relatedtickets}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="relatedticket" label="Related tickets:"}
+			{icon name="relatedticket" label="Related tickets"}
 		</TD>
 		<TD>
 			{foreach $ticket.relatedtickets as $i}
@@ -94,7 +94,7 @@
 	{if $ticket.childtickets}
 	<TR>
 		<TD class="bold nobr">
-			{icon name="childticket" label="Child tickets:"}
+			{icon name="childticket" label="Child tickets"}
 		</TD>
 		<TD>
 			{foreach $ticket.childtickets as $i}
@@ -106,7 +106,7 @@
 	{if $ticket.message}
 	<TR>
 		<TD class="bold">
-			{icon name="info" label="Body:"}
+			{icon name="info" label="<!rt>Content"}
 		</TD>
 		<TD class="fall superlight">
 			{if $ticket.contenttype == 'text/html'}
