--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -17,11 +17,11 @@
 
 {box_container id="ticket"}
 	{box_header multi_row=true}
-		{box_header icon="helpdesk" label="Subject:" icon_class="fa-fw"}
+		{box_header icon="helpdesk" label="Subject" icon_class="fa-fw"}
 			<INPUT type="text" size="50" name="ticket[subject]" maxlength="{ConfigHelper::getConfig('rt.subject_max_length', 50)}"
 				   value="{$ticket.subject|escape}" {tip text="Enter subject" trigger="subject"} {if $layout.module !="eventadd"} required{/if}>
 		{/box_header}
-		{box_header icon="service" label="Service type:" icon_class="fa-fw"}
+		{box_header icon="service" label="Service type" icon_class="fa-fw"}
 			<select name="ticket[service]" id="ticket-service"
 				{tip class="lms-ui-advanced-select" text="Choose service type" trigger="service"}
 				{if ConfigHelper::checkConfig('rt.ticket_service_required')} required{/if}>
@@ -31,7 +31,7 @@
 				{/foreach}
 			</select>
 		{/box_header}
-		{box_header icon="type" label="Ticket type:" icon_class="fa-fw"}
+		{box_header icon="type" label="Ticket type" icon_class="fa-fw"}
 			<select name="ticket[type]" id="ticket-type"
 				{tip class="lms-ui-advanced-select" text="Choose ticket type" trigger="type"}
 				{if ConfigHelper::checkConfig('rt.ticket_type_required')} required{/if}>
@@ -47,7 +47,7 @@
 		{box_panel}
 			{block name="rtticketmodify-leftcolumn"}
 			{if $layout.module != 'eventadd'}
-			{box_row icon="customer" label="Customer:" icon_class="fa-fw"}
+			{box_row icon="customer" label="Customer" icon_class="fa-fw"}
 				{$customer_selector='[name=&quot;ticket[custid]&quot;]'}
 				{$address_selector='[name=&quot;ticket[address_id]&quot;]'}
 				{customerlist form="ticket-form" customers=$customerlist selected=$customerid version=2
@@ -57,7 +57,7 @@
 			{/box_row}
 			{/if}
 
-			{box_row icon="user" label="Requestor:" field_id="requestor" icon_class="fa-fw"}
+			{box_row icon="user" label="Requestor" field_id="requestor" icon_class="fa-fw"}
 				<div class="lms-ui-box-row">
 					<SELECT name="ticket[requestor_userid]" {tip class="lms-ui-advanced-select" text="Select requestor from list" trigger="requestor_userid"}>
 						<option value="">{trans("<!person>- none -")}</option>
@@ -78,7 +78,7 @@
 				</div>
 				<div class="lms-ui-box-row indicated-person">
 					<div class="lms-ui-box-row-label">
-						{trans("Name:")}
+						{trans("Name")}
 					</div>
 					<div class="lms-ui-box-row-field">
 						<INPUT type="text" name="ticket[requestor_name]" id="requestor_name" value="{$ticket.requestor_name}" {tip trigger="requestor_name"}>
@@ -86,7 +86,7 @@
 				</div>
 				<div class="lms-ui-box-row indicated-person">
 					<div class="lms-ui-box-row-label">
-						{trans("E-mail:")}
+						{trans("E-mail")}
 					</div>
 					<div class="lms-ui-box-row-field">
 						<INPUT type="text" name="ticket[requestor_mail]" id="requestor_mail" value="{$ticket.requestor_mail}" {tip trigger="requestor_mail"}>
@@ -94,7 +94,7 @@
 				</div>
 				<div class="lms-ui-box-row indicated-person">
 					<div class="lms-ui-box-row-label">
-						{trans("Phone:")}
+						{trans("Phone")}
 					</div>
 					<div class="lms-ui-box-row-field">
 						<INPUT type="text" name="ticket[requestor_phone]" id="requestor_phone" value="{$ticket.requestor_phone}" {tip trigger="requestor_phone"}>
@@ -103,14 +103,14 @@
 			{/box_row}
 
 {if $layout.module == 'rtticketadd'}
-			{box_row icon="message" label="Message template:" field_id="message-templates" id="message-template-row"
+			{box_row icon="message" label="Message template" field_id="message-templates" id="message-template-row"
 				visible=!empty($messagetemplates) icon_class="fa-fw"}
 				{include file="rt/rtmessagetemplates.html" templates=$messagetemplates tip="Select message template"
 					target='[name="ticket[body]"]'}
 			{/box_row}
 
 			{block name="rtticketadd-content"}
-			{box_row icon="message" label="Content:" icon_class="fa-fw"}
+			{box_row icon="message" label="<!rt>Content:" icon_class="fa-fw"}
 				<div class="valign-middle">
 					<textarea name="ticket[body]" id="ticket-body" cols="50" rows="5"
 						{tip class="lms-ui-wysiwyg-editor lms-ui-helpdesk" text="Enter ticket content" trigger="body"}
@@ -121,13 +121,13 @@
 			{/box_row}
 			{/block}
 
-			{box_row icon="note" label="Note template:" field_id="note-templates" id="note-template-row"
+			{box_row icon="note" label="Note template" field_id="note-templates" id="note-template-row"
 				visible=!empty($notetemplates) icon_class="fa-fw"}
 				{include file="rt/rtmessagetemplates.html" templates=$notetemplates tip="Select note template"
 					target='[name="ticket[note]"]'}
 			{/box_row}
 
-			{box_row icon="note" label="Note:" icon_class="fa-fw"}
+			{box_row icon="note" label="Note" icon_class="fa-fw"}
 				<div class="valign-middle">
 					<textarea name="ticket[note]" id="ticket-note" cols="50" rows="5"
 						{tip text="Enter ticket content" trigger="body"}
@@ -136,26 +136,26 @@
 				</div>
 			{/box_row}
 
-			{box_row icon="attachment" label="Attachments:" icon_class="fa-fw"}
+			{box_row icon="attachment" label="Attachments" icon_class="fa-fw"}
 				{fileupload id="files" fileupload=$fileupload form="ticket-form"}
 			{/box_row}
 {/if}
 
-			{box_row icon="categories" label="Categories:" class="categories" icon_class="fa-fw"}
+			{box_row icon="categories" label="Categories" class="categories" icon_class="fa-fw"}
 				{if ConfigHelper::checkConfig('phpui.helpdesk_allow_empty_categories')}
 				<input type="hidden" name="ticket[categorywarn]" value="{$ticket.categorywarn}">
 				{/if}
 				{include file="rt/rtcategoryselection.html" categories=$categories name_prefix="ticket[categories]"}
 			{/box_row}
 
-			{box_row icon="message" label="Notify users:" labelid="notify" icon_class="fa-fw"}
+			{box_row icon="message" label="Notify users" labelid="notify" icon_class="fa-fw"}
 				<INPUT type="checkbox" name="ticket[notify]" id="notify" value="1"{if $ticket.notify} CHECKED{/if}>
 			{/box_row}
 			{/block}
 		{/box_panel}
 		{box_panel}
 			{block name="rtticketmodify-rightcolumn"}
-			{box_row icon="owner" label="Owner:" icon_class="fa-fw"}
+			{box_row icon="owner" label="Owner" icon_class="fa-fw"}
 				<SELECT size="1" name="ticket[owner]" {tip class="lms-ui-advanced-select" text="Select user" trigger="owner"}>
 					<OPTION value="0">- {trans("select user")} -</OPTION>
 					{foreach $userlist as $user}
@@ -174,7 +174,7 @@
 				</label>
 			{/box_row}
 
-			{box_row icon="verifier" label="Verifier:" field_id="rtverifiers" icon_class="fa-fw"}
+			{box_row icon="verifier" label="Verifier" field_id="rtverifiers" icon_class="fa-fw"}
 				{if $layout.module != 'rtticketedit' || !$ticket.oldverifierid || $ticket.oldverifierid == $layout.logid || ConfigHelper::checkConfig('privileges.superuser')}
 					<SELECT size="1" name="ticket[verifierid]" {tip class="lms-ui-advanced-select" text="Select user" trigger="verifierid"}>
 						<OPTION value="">- {trans("select user")} -</OPTION>
@@ -192,7 +192,7 @@
 				{/if}
 			{/box_row}
 
-			{box_row icon="deadline" label="<!rt>Deadline:" icon_class="fa-fw"}
+			{box_row icon="deadline" label="<!rt>Deadline" icon_class="fa-fw"}
 				{if $layout.module != 'rtticketedit' || ConfigHelper::checkConfig('phpui.helpdesk_allow_all_users_modify_deadline')
 					|| !$ticket.oldverifierid || $ticket.oldverifierid == $layout.logid}
 					<INPUT TYPE="TEXT" NAME="ticket[deadline]" VALUE="{if $ticket.deadline}{$ticket.deadline|date_format:"%Y/%m/%d %H:%M"}{/if}" SIZE="20"
@@ -203,7 +203,7 @@
 				{/if}
 			{/box_row}
 
-			{box_row icon="status" label="Status:" icon_class="fa-fw"}
+			{box_row icon="status" label="Status" icon_class="fa-fw"}
 				<SELECT name="ticket[state]" id="state" {tip class="lms-ui-advanced-select" text="Select status" trigger="state"}>
 					{foreach $_RT_STATES as $stateidx => $state}
 					<OPTION value="{$stateidx}"{if $ticket.state == $stateidx} selected{/if}>{$state.label}</OPTION>
@@ -216,7 +216,7 @@
 				</label>
 			{/box_row}
 
-			{box_row icon="queue" label="Queue:" icon_class="fa-fw"}
+			{box_row icon="queue" label="Queue" icon_class="fa-fw"}
 				<SELECT size="1" name="ticket[queue]" {tip class="lms-ui-advanced-select" text="Select queue" trigger="queue"} onchange="xajax_queue_changed($(this).val(), $('#rtverifiers').val())">
 					{foreach $queuelist as $item}
 					<OPTION value="{$item.id}"
@@ -226,7 +226,7 @@
 				</SELECT>
 			{/box_row}
 
-			{box_row icon="cause" label="Cause:" icon_class="fa-fw"}
+			{box_row icon="cause" label="Cause" icon_class="fa-fw"}
 				<SELECT size="1" name="ticket[cause]" {tip text="Select ticket cause" trigger="cause"}>
 					<OPTION value="0" {if !$ticket.cause}selected{/if}>{trans("unknown/other")}</OPTION>
 					<OPTION value="1" {if $ticket.cause == 1}selected{/if}>{trans("customer's side")}</OPTION>
@@ -234,7 +234,7 @@
 				</SELECT>
 			{/box_row}
 
-			{box_row icon="source" label="Ticket source:" icon_class="fa-fw"}
+			{box_row icon="source" label="Ticket source" icon_class="fa-fw"}
 				<SELECT size="1" name="ticket[source]" {tip text="Select ticket source" trigger="source"}>
 					{foreach $_RT_SOURCES as $sourceidx => $source}
 					<OPTION value="{$sourceidx}"{if $ticket.source == $sourceidx}selected {/if}>{$source}</OPTION>
@@ -242,7 +242,7 @@
 				</SELECT>
 			{/box_row}
 
-			{box_row icon="priority" label="Priority:" icon_class="fa-fw"}
+			{box_row icon="priority" label="Priority" icon_class="fa-fw"}
 				<SELECT size="1" name="ticket[priority]" {tip text="Set ticket priority" trigger="priority"}>
 					{foreach $_RT_PRIORITIES as $priorityidx => $priority}
 					<OPTION value="{$priorityidx}"{if $ticket.priority == $priorityidx} selected{/if}>{$priority}</OPTION>
@@ -252,7 +252,7 @@
 			{/box_row}
 
 {if $layout.module != 'eventadd'}
-			{box_row icon="location" label="Location:" icon_class="fa-fw"}
+			{box_row icon="location" label="Location" icon_class="fa-fw"}
 				{if $ticket.address_id > 0 && $customerid}
 					{$selected_address_id = $ticket.address_id}
 				{else}
@@ -287,7 +287,7 @@
 				</select>
 			{/box_row}
 
-			{box_row icon="netnode" label="Network node:" icon_class="fa-fw"}
+			{box_row icon="netnode" label="Network node" icon_class="fa-fw"}
 				<SELECT name="ticket[netnodeid]" size="30" {tip class="lms-ui-advanced-select" text="Select network node (optional)" trigger="netnodeid"}
 						onchange="xajax_netnode_changed($(this).val(), $('#netdevid').val())">
 					<OPTION value="">{trans("- none -")}</OPTION>
@@ -297,15 +297,15 @@
 				</SELECT>
 			{/box_row}
 
-			{box_row icon="netdev" label="Device:" field_id="rtnetdevs" icon_class="fa-fw"}
+			{box_row icon="netdev" label="Device" field_id="rtnetdevs" icon_class="fa-fw"}
 				{include file="rt/rtnetdevs.html" form="ticket"}
 			{/box_row}
 
-			{box_row id="customernotify-row" icon="message" label="Notify customer:" labelid="customernotify"}
+			{box_row id="customernotify-row" icon="message" label="Notify customer" labelid="customernotify"}
 				<input type="checkbox" id="customernotify" name="ticket[customernotify]" value="1"{if isset($ticket.customernotify)} checked{/if}>
 			{/box_row}
 
-			{box_row icon="invproject" label="Investment project:" icon_class="fa-fw"}
+			{box_row icon="invproject" label="Investment project" icon_class="fa-fw"}
 				<SELECT name="ticket[invprojectid]" {tip class="lms-ui-advanced-select" text="Select investment projects" trigger="invprojectid"}>
 					<OPTION value="">{trans("- none -")}</OPTION>
 					{foreach $invprojectlist as $idx => $project}
@@ -324,7 +324,7 @@
 				{/strip}{/capture}
 			{/function}
 
-			{box_row icon="parentticket" label="Parent ticket:" icon_class="fa-fw"}
+			{box_row icon="parentticket" label="Parent ticket" icon_class="fa-fw"}
 				{list id="parent-ticket" tipid="parentid" tip="Enter ID of parent ticket" items=$ticket.parent
 					field_name_pattern="ticket[parentid]" item_content="ticket_item_content"}
 			{/box_row}
@@ -336,7 +336,7 @@
 				{$class = ""}
 				{$tip = ""}
 			{/if}
-			{box_row icon="relatedticket" label="Related tickets:" class=$class tip=$tip icon_class="fa-fw"}
+			{box_row icon="relatedticket" label="Related tickets" class=$class tip=$tip icon_class="fa-fw"}
 				{list id="related-tickets" tipid="related-tickets-id" tip="Enter ticket identifier or ticket subject part"
 					items=$ticket.relatedtickets field_name_pattern="ticket[relatedtickets][%id%]" item_content="ticket_item_content"
 					disabled=empty($ticket.parent)}
