--- a/templates/default/rt/rtsearch.html
+++ b/templates/default/rt/rtsearch.html
@@ -204,15 +204,13 @@
 		</TD>
 	</TR>
         <TR>
-			<TD class="bold nobr">
-				{icon name="verifier" label="Verifier"}
-			</TD>
+			<TD class="bold nobr">{icon name="verifier" label="Verifier"}</TD>
 			<TD>
 				<SELECT size="1" name="search[verifierid]" {tip text="Select user/owner of the ticket"}>
 					<OPTION value="0">{trans("- all owners -")}</OPTION>
-						{foreach $userlist as $item}
-							<OPTION value="{$item.id}" {if $item.id == $search.verifierid}SELECTED{/if}>{$item.rname|escape}</OPTION>
-						{/foreach}
+					{foreach $userlist as $item}
+						<OPTION value="{$item.id}" {if $item.id == $search.verifierid}SELECTED{/if}>{$item.rname|escape}</OPTION>
+					{/foreach}
 				</SELECT>
 			</TD>
         </TR>
